Table users {
  user_id integer [primary key]
  name varchar(255)
  email varchar(255) [unique]
  password_hash varchar(255)
  phone varchar(20)
  province_id integer [ref: > provinces.province_id]
  ward_id integer [ref: > wards.ward_id]
  street varchar(255)
  full_address varchar(500)
  gender smallint [default: 0]
  dob date
  role varchar(20) [default: "customer"]
  is_active boolean [default: true]
  last_login datetime
  created_at datetime [default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table provinces {
  province_id integer [primary key]
  code varchar(20) [unique]
  name varchar(255)
}

Table wards {
  ward_id integer [primary key]
  province_id integer [ref: > provinces.province_id]
  code varchar(20) [unique]
  name varchar(255)
}

Table shipping_addresses {
  shipping_address_id integer [primary key]
  user_id integer [ref: > users.user_id]
  province_id integer [ref: > provinces.province_id]
  ward_id integer [ref: > wards.ward_id]
  recipient_name varchar(255)
  recipient_phone varchar(20)
  street varchar(255)
  full_address varchar(500)
  is_default boolean [default: false]
  created_at datetime [default: `now()`]
  deleted_at datetime
}

Table categories {
  category_id integer [primary key]
  name varchar(255)
  slug varchar(255) [unique]
  description text
  image varchar(500)
  parent_id integer [ref: > categories.category_id]
  is_active boolean [default: true]
}

Table products {
  product_id integer [primary key]
  category_id integer [ref: > categories.category_id]
  name varchar(255)
  slug varchar(255) [unique]
  description text
  base_price numeric(15,2)
  thumbnail varchar(500)
  is_new boolean [default: false]
  discount_percent integer [default: 0]
  badge varchar(50)
  images json
  is_published boolean [default: true]
  created_at datetime [default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table product_variants {
  variant_id integer [primary key]
  product_id integer [ref: > products.product_id]
  sku varchar(50) [unique]
  attributes json
  price numeric(15,2)
  stock integer [default: 0]
  images json
  is_active boolean [default: true]
}

Table carts {
  cart_id integer [primary key]
  user_id integer [ref: > users.user_id]
  updated_at datetime
}

Table cart_items {
  cart_item_id integer [primary key]
  cart_id integer [ref: > carts.cart_id]
  product_variant_id integer [ref: > product_variants.variant_id]
  quantity integer [default: 1]
  created_at datetime [default: `now()`]
}

Table orders {
  order_id integer [primary key]
  code varchar(50) [unique]
  user_id integer [ref: > users.user_id]
  shipping_address_id integer [ref: > shipping_addresses.shipping_address_id]
  discount_id integer [ref: > discounts.discount_id]
  subtotal numeric(15,2)
  discount_amount numeric(15,2)
  total_price numeric(15,2)
  payment_method varchar(50)
  payment_status varchar(20) [default: "unpaid"]
  transaction_id varchar(100)
  status varchar(20) [default: "pending"]
  note text
  created_at datetime [default: `now()`]
  updated_at datetime
}

Table order_items {
  order_item_id integer [primary key]
  order_id integer [ref: > orders.order_id]
  product_variant_id integer [ref: > product_variants.variant_id]
  product_name varchar(255)
  variant_attributes_snapshot json
  quantity integer
  unit_price numeric(15,2)
  total_price numeric(15,2)
}

Table discounts {
  discount_id integer [primary key]
  code varchar(50) [unique]
  type varchar(20)
  value numeric(15,2)
  max_discount_amount numeric(15,2)
  min_order_value numeric(15,2)
  start_date datetime
  end_date datetime
  usage_limit integer
  used_count integer [default: 0]
  is_active boolean [default: true]
}

Table reviews {
  review_id integer [primary key]
  user_id integer [ref: > users.user_id]
  product_id integer [ref: > products.product_id]
  order_item_id integer [ref: > order_items.order_item_id, unique]
  rating integer
  title varchar(255)
  comment text
  images json
  helpful_count integer [default: 0]
  size_purchased varchar(20)
  created_at datetime [default: `now()`]
  is_approved boolean [default: true]
}
